<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GroupList" >

    <Button
        android:id="@+id/myInfo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:text="@string/MyInfo" />

    <Button
        android:id="@+id/contacts"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/myInfo"
        android:layout_toRightOf="@+id/myInfo"
        android:text="@string/Contacts" />

    <Button
        android:id="@+id/newGrp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/contacts"
        android:layout_alignBottom="@+id/contacts"
        android:layout_toRightOf="@+id/contacts"
        android:text="@string/newGrp" />

    <Button
        android:id="@+id/settings"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/newGrp"
        android:layout_toRightOf="@+id/newGrp"
        android:text="@string/settings" />
    
    <ListView
        android:id="@+id/groupsListViewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="false"
        android:layout_below="@id/myInfo"
       />

</RelativeLayout>
