<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactsList" >
        
        <Button
            android:id="@+id/Groups"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/MyInfo"
            android:text="@string/Groups" />

        <Button
            android:id="@+id/newContact"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_toRightOf="@id/Groups"
            android:text="@string/newGrp" />
                
         <ListView
        android:id="@+id/contactsListViewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="false"
        android:layout_below="@id/newContact"
       />

         <Button
             android:id="@+id/searchContactList"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/newContact"
             android:layout_toRightOf="@+id/newContact"
             android:text="@string/Search" />

         <Button
             android:id="@+id/MyInfo"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/Groups"
             android:layout_alignBottom="@+id/Groups"
             android:layout_alignParentLeft="true"
             android:text="@string/MyInfo" />

</RelativeLayout>
